--- a/M2-D7.html
+++ b/M2-D7.html
@@ -29,6 +29,12 @@
             EX10) Write a selector to target the footer
         */
 
+    .jumbotron h1 {
+      color: pink;
+    }
+
+    
+
     </style>
     <meta charset="utf-8" />
     <meta
