--- a/M2-D7.html
+++ b/M2-D7.html
@@ -29,8 +29,17 @@
             EX10) Write a selector to target the footer
         */
 
+    /* ex1 */
+
     .jumbotron h1 {
       color: pink;
+    }
+
+    /* ex2 */
+
+    .nav > a {
+      background-color: pink;
+      
     }
 
     
