--- a/M2-D7.html
+++ b/M2-D7.html
@@ -48,6 +48,12 @@
       color: pink !IMPORTANT;
     }
 
+    /* ex4 */
+
+    .blog-post:nth-child(2) {
+      color: pink;
+    }
+
     
 
     </style>
