--- a/M2-D7.html
+++ b/M2-D7.html
@@ -54,6 +54,12 @@
       color: pink;
     }
 
+    /* ex5 */
+
+    .nav > a:nth-child(even) {
+      background-color: yellow !IMPORTANT;
+    }
+
     
 
     </style>
