--- a/M2-D7.html
+++ b/M2-D7.html
@@ -60,6 +60,14 @@
       background-color: yellow !IMPORTANT;
     }
 
+    /* ex6 */
+
+    .blog-post:nth-child(4) {
+      color: yellow;
+    }
+
+    /* ex7 */
+
     
 
     </style>
