--- a/M2-D7.html
+++ b/M2-D7.html
@@ -68,7 +68,10 @@
 
     /* ex7 */
 
-    
+    .p-4:nth-child(2) ol li {
+      background-color: pink;
+    }
+
 
     </style>
     <meta charset="utf-8" />
