--- a/M2-D7.html
+++ b/M2-D7.html
@@ -72,6 +72,11 @@
       background-color: pink;
     }
 
+    /* ex8 */
+
+    .blog-post-meta a {
+      background-color: yellow;
+    }
 
     </style>
     <meta charset="utf-8" />
