--- a/M2-D7.html
+++ b/M2-D7.html
@@ -74,7 +74,7 @@
 
     /* ex8 */
 
-    .blog-post-meta a {
+    .blog-post:nth-child(3) p:nth-child(2) a {
       background-color: yellow;
     }
 
