--- a/M2-D7.html
+++ b/M2-D7.html
@@ -78,6 +78,12 @@
       background-color: yellow;
     }
 
+    /* ex9 */
+
+    footer p:nth-child(2) a {
+      background-color: pink;
+    }
+
     </style>
     <meta charset="utf-8" />
     <meta
