--- a/M2-D7.html
+++ b/M2-D7.html
@@ -84,6 +84,12 @@
       background-color: pink;
     }
 
+    /* ex10 */
+
+    .blog-footer {
+      color: pink;
+    }
+
     </style>
     <meta charset="utf-8" />
     <meta
