--- a/M2-D7.html
+++ b/M2-D7.html
@@ -517,6 +517,25 @@
         EX19) Write a function and attach it to the "Older" button, to remove the last Blog Post
         EX20) Write an alert with the name of the author every time the user hover with the mouse over an author name
     */
+
+    // EX11
+
+    const addToNavbar = function(link) {
+            let navbar = document.getElementsByClassName("nav")[0]
+            let newLink = document.createElement("a")
+            console.log(navbar)
+            var linkText = document.createTextNode(link)
+            newLink.appendChild(linkText)
+            newLink.title = link
+            newLink.href = "#"
+            newLink.className = "p-2 text-muted"
+            navbar.appendChild(newLink)
+          }
+    window.addEventListener("load",function() { addToNavbar("New Link") })
+
+    // EX12
+
+    
     </script>
   </body>
 </html>
