commented out event listeners

--- a/M2-D7.html
+++ b/M2-D7.html
@@ -531,7 +531,7 @@
       newLink.className = "p-2 text-muted"
       navbar.appendChild(newLink)
     }
-    window.addEventListener("load",function() { addToNavbar("New Link") })
+    // window.addEventListener("load",function() { addToNavbar("New Link") })
 
     // EX12
 
@@ -540,7 +540,7 @@
       console.log("title is: ", title)
       title.style.color = color
     }
-    window.addEventListener("load",function() { changeTitleColor("yellow") })
+    // window.addEventListener("load",function() { changeTitleColor("yellow") })
 
     // EX13
 
@@ -549,7 +549,7 @@
       console.log(jumbotron)
       jumbotron.style.backgroundColor = color
     }
-    window.addEventListener("load",function() { changeJumbotronBackground("white") })
+    // window.addEventListener("load",function() { changeJumbotronBackground("white") })
 
     </script>
   </body>
