commented out console.log

--- a/M2-D7.html
+++ b/M2-D7.html
@@ -523,7 +523,7 @@
     const addToNavbar = function(link) {
       let navbar = document.getElementsByClassName("nav")[0]
       let newLink = document.createElement("a")
-      console.log(navbar)
+      // console.log(navbar)
       var linkText = document.createTextNode(link)
       newLink.appendChild(linkText)
       newLink.title = link
