--- a/M2-D7.html
+++ b/M2-D7.html
@@ -550,6 +550,14 @@
     }
     // window.addEventListener("load", function() { changeJumbotronBackground("bg-light") })
 
+    // EX14
+
+    const removeAllLi = function() {
+      let object = document.querySelectorAll(".list-unstyled")[1]
+      object.remove("li")
+      }
+    //  window.addEventListener("load", function() { removeAllLi("li") })
+
     </script>
   </body>
 </html>
