--- a/M2-D7.html
+++ b/M2-D7.html
@@ -558,6 +558,14 @@
       }
     //  window.addEventListener("load", function() { removeAllLi("li") })
 
+    // EX15
+
+    const changeColumnSize = function() {
+      let object = document.querySelector("h1")
+      object.classList.add("col-6")
+    }
+    // window.addEventListener("load", function() { changeColumnSize("h1") })
+
     </script>
   </body>
 </html>
